--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FoodMan</title>
+    <link href="https://syahhoam.github.io/foodman-website/">
+    <title>FoodMan-procoder09</title>
 </head>
 <body>
-    
+    <nav>
+        <div class="nav_header">
+            <div class="logo nav__logo">
+                <a href="#">Food <span>Man</span></a>
+            </div>
+        </div>
+    </nav>
 </body>
-</html>
+</html> 
